--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,7 @@ body {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-    text-align: center;
-}
-
 table {
-    margin-top: 10px;
     width: 100%;
     border-collapse: separate;
     border: 1px solid #ddd;
@@ -46,4 +41,80 @@ iframe {
     margin-top: 10px;
     border: 1px solid #ddd;
     border-radius: 12px;
+}
+
+h2 {
+    width: 95%;
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    transition: background 0.2s;
+    text-align: center;
+}
+
+h2:hover {
+    background-color: #e0e0e0;
+}
+
+h2::after {
+    content: "click to see more";
+    margin-left: 60px;
+    position: absolute;
+    transform: translateX(-50%) translateY(10px);
+    font-size: 13px;
+    color: #555;
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    pointer-events: none;
+}
+h2:hover::after {
+    opacity: 1;
+}
+
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.8);
+}
+
+.modal-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  width: 70%;
+  max-width: 1000px;
+  aspect-ratio: 4 / 3;
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-content img {
+  width: 230px;
+  height: 240px;
+  object-fit: cover;
+  border-radius: 6px;
+
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: #ffaaaa;
 }
